--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -4,40 +4,6 @@
 
 /* This file is for your main application CSS */
 
-/* Alerts and form errors used by phx.new */
-.alert {
-  padding: 15px;
-  margin-bottom: 20px;
-  border: 1px solid transparent;
-  border-radius: 4px;
-}
-.alert-info {
-  color: #31708f;
-  background-color: #d9edf7;
-  border-color: #bce8f1;
-}
-.alert-warning {
-  color: #8a6d3b;
-  background-color: #fcf8e3;
-  border-color: #faebcc;
-}
-.alert-danger {
-  color: #a94442;
-  background-color: #f2dede;
-  border-color: #ebccd1;
-}
-.alert p {
-  margin-bottom: 0;
-}
-.alert:empty {
-  display: none;
-}
-.invalid-feedback {
-  color: #a94442;
-  display: block;
-  margin: -1rem 0 2rem;
-}
-
 /* LiveView specific classes for your customization */
 .phx-no-feedback.invalid-feedback,
 .phx-no-feedback .invalid-feedback {
@@ -122,3 +88,125 @@
   100% { opacity: 0; }
 }
 
+:root {
+  --header-position: sticky;
+  --content-offset: 0px;
+  --header-height: 64px;
+  --header-mb: 0px;
+  --avatar-image-transform: translate3d(0rem, 0, 0) scale(1);
+  --avatar-border-transform: translate3d(-0.222222rem, 0, 0) scale(1.77778);
+  --avatar-border-opacity: 0;
+  --header-top: 0px;
+  --avatar-top: 0px;
+}
+
+.prose {
+  --tw-prose-body: #52525b;
+  --tw-prose-headings: #18181b;
+  --tw-prose-links: #14b8a6;
+  --tw-prose-links-hover: #0d9488;
+  --tw-prose-underline: rgba(20,184,166,.2);
+  --tw-prose-underline-hover: #14b8a6;
+  --tw-prose-bold: #18181b;
+  --tw-prose-counters: #18181b;
+  --tw-prose-bullets: #18181b;
+  --tw-prose-hr: #f4f4f5;
+  --tw-prose-quote-borders: #e4e4e7;
+  --tw-prose-captions: #a1a1aa;
+  --tw-prose-code: #3f3f46;
+  --tw-prose-code-bg: hsla(240,5%,84%,.2);
+  --tw-prose-pre-code: #f4f4f5;
+  --tw-prose-pre-bg: #18181b;
+  --tw-prose-pre-border: transparent;
+  --tw-prose-th-borders: #e4e4e7;
+  --tw-prose-td-borders: #f4f4f5;
+  --tw-prose-invert-body: #a1a1aa;
+  --tw-prose-invert-headings: #e4e4e7;
+  --tw-prose-invert-links: #2dd4bf;
+  --tw-prose-invert-links-hover: #2dd4bf;
+  --tw-prose-invert-underline: rgba(45,212,191,.3);
+  --tw-prose-invert-underline-hover: #2dd4bf;
+  --tw-prose-invert-bold: #e4e4e7;
+  --tw-prose-invert-counters: #e4e4e7;
+  --tw-prose-invert-bullets: #e4e4e7;
+  --tw-prose-invert-hr: rgba(63,63,70,.4);
+  --tw-prose-invert-quote-borders: #71717a;
+  --tw-prose-invert-captions: #71717a;
+  --tw-prose-invert-code: #d4d4d8;
+  --tw-prose-invert-code-bg: hsla(240,6%,90%,.05);
+  --tw-prose-invert-pre-code: #f4f4f5;
+  --tw-prose-invert-pre-bg: rgba(0,0,0,.4);
+  --tw-prose-invert-pre-border: hsla(240,6%,90%,.1);
+  --tw-prose-invert-th-borders: #3f3f46;
+  --tw-prose-invert-td-borders: #27272a;
+  color: var(--tw-prose-body);
+  line-height: 1.75rem;
+}
+
+.dark .dark\:prose-invert {
+  --tw-prose-body: var(--tw-prose-invert-body);
+  --tw-prose-headings: var(--tw-prose-invert-headings);
+  --tw-prose-links: var(--tw-prose-invert-links);
+  --tw-prose-links-hover: var(--tw-prose-invert-links-hover);
+  --tw-prose-underline: var(--tw-prose-invert-underline);
+  --tw-prose-underline-hover: var(--tw-prose-invert-underline-hover);
+  --tw-prose-bold: var(--tw-prose-invert-bold);
+  --tw-prose-counters: var(--tw-prose-invert-counters);
+  --tw-prose-bullets: var(--tw-prose-invert-bullets);
+  --tw-prose-hr: var(--tw-prose-invert-hr);
+  --tw-prose-quote-borders: var(--tw-prose-invert-quote-borders);
+  --tw-prose-captions: var(--tw-prose-invert-captions);
+  --tw-prose-code: var(--tw-prose-invert-code);
+  --tw-prose-code-bg: var(--tw-prose-invert-code-bg);
+  --tw-prose-pre-code: var(--tw-prose-invert-pre-code);
+  --tw-prose-pre-bg: var(--tw-prose-invert-pre-bg);
+  --tw-prose-pre-border: var(--tw-prose-invert-pre-border);
+  --tw-prose-th-borders: var(--tw-prose-invert-th-borders);
+--tw-prose-td-borders: var(--tw-prose-invert-td-borders);
+}
+
+.prose :where(img):not(:where([class~=not-prose] *)) {
+  border-radius: 1.5rem;
+}
+.prose :where(.prose>*):not(:where([class~=not-prose] *)) {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
+.prose :where(a):not(:where([class~=not-prose] *)) {
+  color: var(--tw-prose-links);
+  font-weight: 600;
+  text-decoration: underline;
+  text-decoration-color: var(--tw-prose-underline);
+  transition-property: color,text-decoration-color;
+  transition-duration: .15s;
+  transition-timing-function: cubic-bezier(.4,0,.2,1);
+}
+
+.prose :where(h2):not(:where([class~=not-prose] *)) {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  margin-top: 5rem;
+  margin-bottom: 1rem;
+}
+.prose :where(h2,h3):not(:where([class~=not-prose] *)) {
+  color: var(--tw-prose-headings);
+  font-weight: 600;
+}
+
+.prose :where(ul,ol):not(:where([class~=not-prose] *)) {
+  padding-left: 1.5rem;
+}
+.prose :where(ol):not(:where([class~=not-prose] *)) {
+  list-style-type: decimal;
+}
+
+menu, ol, ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.prose :where(:is(h2,h3)+*):not(:where([class~=not-prose] *)) {
+  margin-top: 0;
+}
