--- a/lib/portfolio_web/templates/layout/root.html.heex
+++ b/lib/portfolio_web/templates/layout/root.html.heex
@@ -123,7 +123,11 @@
                               <ul class="-my-2 divide-y divide-zinc-100 text-base text-zinc-800 dark:divide-zinc-100/5 dark:text-zinc-300">
                                 <%= for route <- nav_routes() do %>
                                   <li>
-                                    <a class="block py-2" data-headlessui-state="open" href={route.href}>
+                                    <a
+                                      class="block py-2"
+                                      data-headlessui-state="open"
+                                      href={route.href}
+                                    >
                                       <%= route.text %>
                                     </a>
                                   </li>
