why i like elixir

--- a/lib/portfolio_web/templates/page/index.html.heex
+++ b/lib/portfolio_web/templates/page/index.html.heex
@@ -82,8 +82,7 @@
         I'm a huge proponent of Test Driven Development and Delivery. It is to software the same as the assembly line is to the Automobile Industry.
       </p>
       <p>
-        In 2013, I learnt to code and the following years were filled with me just building tons of (some would say <em>shitty</em>) things; Those turned out to build a solid experience for me when I started building production applications.
-        In 2016, I worked briefly at PROTEUX Technologies and then moved to HESGES SYNERGY NIGERIA Ltd where I later became the lead developer. If you have any questions, or want us to be friends, or even just to validate my experience, you can shoot me a mail. I always respond.
+        If you have any questions, or want us to be friends, or even just to validate my experience, you can shoot me a mail. I always respond.
       </p>
     </div>
   </div>
