--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -197,8 +197,8 @@
 .prose :where(ul,ol):not(:where([class~=not-prose] *)) {
   padding-left: 1.5rem;
 }
-.prose :where(ol):not(:where([class~=not-prose] *)) {
-  list-style-type: decimal;
+.prose :where(ol,ul):not(:where([class~=not-prose] *)) {
+  list-style-type: circle;
 }
 
 menu, ol, ul {
