--- a/lib/portfolio_web/templates/page/index.html.heex
+++ b/lib/portfolio_web/templates/page/index.html.heex
@@ -46,7 +46,7 @@
         Being a polyglot, I'm quite comfortable with various programming languages (JS, PHP, JAVA) and paradigms such as
         <a
           href="https://en.wikipedia.org/wiki/Object-oriented_programming"
-          class="underline"
+          class="border-b border-dashed text-teal-500"
           target="__blank"
         >
           OOP
@@ -54,7 +54,7 @@
         and
         <a
           href="https://en.wikipedia.org/wiki/Functional_programming"
-          class="underline"
+          class="border-b border-dashed text-teal-500"
           target="__blank"
         >
           FP
@@ -62,11 +62,11 @@
         but in recent times, my goto language has been <a
           target="blank"
           href="https://elixir-lang.org"
-          class="underline"
+          class="border-b border-dashed text-teal-500"
         >Elixir</a>. I enjoy working with complex (not complicated) scalable systems and I find that Elixir and
         <a
           href="https://en.wikipedia.org/wiki/Open_Telecom_Platform"
-          class="underline"
+          class="border-b border-dashed text-teal-500"
           target="__blank"
         >
           OTP
@@ -75,7 +75,7 @@
         <a
           target="__blank"
           href="https://www.infoq.com/presentations/complex-distributed-systems/?utm_campaign=infoq_content&utm_source=infoq&utm_medium=feed&utm_term=global"
-          class="underline"
+          class="border-b border-dashed text-teal-500"
         >
           tame the beast.
         </a>
