--- a/lib/portfolio_web/templates/page/posts.html.heex
+++ b/lib/portfolio_web/templates/page/posts.html.heex
@@ -24,7 +24,7 @@
             </h2>
             <time
               class="md:hidden relative z-10 order-first mb-3 flex items-center text-sm text-zinc-400 dark:text-zinc-500 pl-3.5"
-              datetime="2022-09-05"
+              datetime={date_for_humans(post.date)}
             >
               <span class="absolute inset-y-0 left-0 flex items-center" aria-hidden="true"><span class="h-4 w-0.5 rounded-full bg-zinc-200 dark:bg-zinc-500"></span></span>September 5, 2022
             </time>
@@ -33,8 +33,8 @@
             </p>
           </div>
           <time
-            class="mt-1 hidden md:block relative z-10 order-first mb-3 flex items-center text-sm text-zinc-400 dark:text-zinc-500"
-            datetime="2022-09-05"
+            class="mt-1 md:block relative z-10 order-first mb-3 flex items-center text-sm text-zinc-400 dark:text-zinc-500"
+            datetime={date_for_humans(post.date)}
           >
             <%= date_for_humans(post.date) %>
           </time>
