fix: improve text

--- a/lib/portfolio_web/templates/page/index.html.heex
+++ b/lib/portfolio_web/templates/page/index.html.heex
@@ -45,7 +45,7 @@
       </p>
 
       <p>
-        As a polyglot programmer, I am proficient in multiple languages such as JavaScript, PHP, and Java, Golang. Recently, however,
+        As a polyglot programmer, I am proficient in multiple languages such as JavaScript, PHP, Java, Golang e.t.c. Recently, however,
         <a
           target="blank"
           href="https://elixir-lang.org"
@@ -53,7 +53,7 @@
         >
           Elixir
         </a>
-        has become my go-to language due to its strengths in building scalable, maintainable systems.
+        has become my preferred choice due to its strengths in building large, scalable, maintainable systems with very few moving parts.
         I’m particularly passionate about functional programming and Erlang's powerful OTP framework, which provides exceptional tools for managing complexity.
       </p>
       <p>
