--- a/lib/portfolio_web/templates/page/index.html.heex
+++ b/lib/portfolio_web/templates/page/index.html.heex
@@ -18,7 +18,7 @@
   </div>
   <div class="lg:order-first lg:row-span-2">
     <h1 class="text-4xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-4xl flex items-center">
-      <span>Hi, I’m Tosin</span>
+      <span>Hi, I’m Tosin.</span>
       <svg
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
