--- a/lib/portfolio_web/templates/page/index.html.heex
+++ b/lib/portfolio_web/templates/page/index.html.heex
@@ -50,10 +50,7 @@
           target="blank"
           href="https://elixir-lang.org"
           class="font-bold border-b border-dashed text-teal-500"
-        >
-          Elixir
-        </a>
-        has become my preferred choice due to its strengths in building large, scalable, maintainable systems with very few moving parts.
+        > Elixir</a> has become my preferred choice due to its strengths in building large, scalable, maintainable systems with very few moving parts.
         I’m particularly passionate about functional programming and Erlang's powerful OTP framework, which provides exceptional tools for managing complexity.
       </p>
       <p>
@@ -139,7 +136,7 @@
       <li class="mt-8 border-t border-zinc-100 pt-8 dark:border-zinc-700/40 flex">
         <a
           class="group flex text-sm font-medium text-zinc-800 transition hover:text-teal-500 dark:text-zinc-200 dark:hover:text-teal-500"
-          href="mailto:#{Portfolio.get_config(:email)}"
+          href={"mailto:#{Portfolio.get_config(:email)}"}
         >
           <svg
             viewBox="0 0 24 24"
