change code style

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -263,7 +263,7 @@ Makeup stylesheet for syntax highlighting
 */
 
 .makeup .hll {
-    background-color: #222222;
+    background-color: #282c34;
 }
 .makeup {
     background: none;
