reduce font size

--- a/lib/portfolio_web/templates/page/post.html.heex
+++ b/lib/portfolio_web/templates/page/post.html.heex
@@ -38,7 +38,7 @@
           </span>
         </time>
       </header>
-      <div class="mt-8 prose dark:prose-invert" style="text-align: justify">
+      <div class="mt-8 text-sm prose dark:prose-invert" style="text-align: justify">
         <%= raw(@post.body) %>
       </div>
     </article>
