--- a/lib/portfolio_web/templates/layout/root.html.heex
+++ b/lib/portfolio_web/templates/layout/root.html.heex
@@ -278,7 +278,7 @@
                       </a>
                     </div>
                     <p class="text-sm text-zinc-400 dark:text-zinc-500">
-                      © <%= current_year() %> Tosin Soremekun. All rights reserved.
+                      © <%= current_year() %> Tosin Soremekun
                     </p>
                   </div>
                 </div>
